--- a/src/components/FormStatus/style.sass
+++ b/src/components/FormStatus/style.sass
@@ -1,10 +1,12 @@
-
-.main-block
+.wrapper-form
+  margin-right: 20px
+  margin-bottom: 20px
   display: flex
-  align-items: start
+  align-items: center
   justify-content: center
   @media only screen and (max-width: 530px)
-    display: flex
     flex-direction: column
     align-items: center
     justify-content: center
+
+
